# A-simple-neural-network

./: CMakeLists.txt  Net.cpp  Net.h  TrainingData.cpp  TrainingData.h  main.cpp  neuron.h  readme.md
